packages/jsts/tests/dbd/benchmark/TypeError/T08 Reduce of empty array with no initial value/T08-02/reproducer.mjs
import { getArrayStats } from './reproducer-utils.mjs';
getArrayStats([])
